# mkdocs-ledger

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  cli.md  contributing.md  docstrings.md  housekeeping.md  index.md  mermaid.md  openapi.md  petstore-expanded.yaml
latest/cli/: index.html
latest/docstrings/: index.html
latest/mermaid/: index.html
latest/openapi/: index.html
main/: 404.html  VERSION  index.html  objects.inv  sitemap.xml
main/changelog/: index.html
main/cli/: index.html
main/contributing/: index.html
main/docstrings/: index.html
main/housekeeping/: index.html
main/mermaid/: index.html
main/openapi/: index.html
main/reference/: index.html
main/reference/SUMMARY/: index.html
main/reference/docstrings/: index.html
main/search/: search_index.json
mkdocs_ledger/: __init__.py  _version.py  docstrings.py  main.html  mkdocs_theme.yml  redoc.html
mkdocs_ledger/assets/: ledger.css
mkdocs_ledger/partials/: toc-item.html
scripts/: gendocs.py
tests/: test_mkdocs_ledger.py
